Adapt to changes in the Google Maps API: google.maps.Point().toString() now returns floats instead of integers.

BUG: 270624